=======
CHANGES
=======


0.5 (Unreleased)
----------------

- Added zope support


0.4 (2011-06-07)
----------------

- Added 'layout' decorator style layout registration.

- Use config.action in 'layout.registerLayout'

- Added 'path' API funcion, it tranforms related path
  to absolute.


0.3 (2011-06-03)
----------------

- Use config.action in 'view.registerView' and 'view.registerPage'

- Secure view if permission is supplied


0.2 (2011-05-30)
----------------

- If view's update method returns dict
  use this dict as locals for template.


0.1 (2011-05-27)
----------------

- Initial release